# microtime

app/: .env  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  constants.ts  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src/components/: Calendar.tsx  Details.tsx  GraphicView.tsx  Header.tsx  HeartRate.tsx  Layout.tsx  Oximetry.tsx  Report.tsx  Steps.tsx  Temperature.tsx  User.tsx
app/src/pages/: Home.tsx
app/src/pages/calendars/: Oximetry.tsx  Temperature.tsx
app/src/pages/details/: HeartRate.tsx  Oximetry.tsx  Steps.tsx  Temperature.tsx
app/src/utils/: chart.ts  values.ts
esp32/: Cargo.toml
esp32/components/ds18b20/: CMakeLists.txt  ds18b20.c
esp32/components/ds18b20/include/: ds18b20.h
esp32/src/: client.rs  images.rs  main.rs  network.rs  solver.rs  tasks.rs
esp32/src/drivers/: ds18b20.rs  max3010x.rs  mod.rs  mpu6050.rs  ssd1306.rs
esp32/src/handlers/: button.rs  ds18b20.rs  max3010x.rs  mod.rs  mpu6050.rs  ssd1306.rs
esp32/src/utils/: check.rs  driver.rs  mod.rs  sntp.rs
server/: Cargo.toml
server/src/: database.rs  main.rs  messages.rs  mqtt.rs  socket.rs
server/src/services/: heart_rate.rs  mod.rs  report.rs  steps.rs  temperature.rs
server/src/utils/: mod.rs
