[package]
name = "esp32c3"
version = "0.1.0"
authors = ["zam-cv <a01799283@tec.mx>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "0.33.7", features = ["native", "binstart"] }
anyhow = "1.0.75"
embedded-hal = "0.2.7"
ssd1306 = "0.8.4"
mpu6050-dmp = "0.3.0"
embedded-graphics = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono = "0.4.31"

[build-dependencies]
embuild = "0.31.3"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components"]
bindings_header = "src/binding.h"
bindings_module = "bind"
