[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
anyhow = "1.0.75"
chrono = "0.4.31"
lazy_static = "1.4.0"
mongodb = "2.7.1"
rumqttc = "0.23.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = "1.34.0"
uuid = "1.6.1"
